# ShaderFmt

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
app/: CMakeLists.txt
app/src/: CommandPalette.cpp  CommandPalette.hpp  DiffDialog.cpp  DiffDialog.hpp  EditorTab.cpp  EditorTab.hpp  MainWindow.cpp  MainWindow.hpp  ShaderViewport.cpp  ShaderViewport.hpp  ShaderfmtLexer.cpp  ShaderfmtLexer.hpp  StylePanel.cpp  StylePanel.hpp  Theme.cpp  Theme.hpp  Version.hpp.in  main.cpp
docs/: engine-internals.md  lexer-parser-study.md  user-guide.md
lib/: CMakeLists.txt
lib/include/shaderfmt/: Ast.hpp  Formatter.hpp  GlslVersionLint.hpp  LanguageDetector.hpp  Lexer.hpp  Parser.hpp  Token.hpp
lib/src/: Formatter.cpp  GlslVersionLint.cpp  LanguageDetector.cpp  Lexer.cpp  Parser.cpp
scripts/: bump-cmake-version.js
tests/: CMakeLists.txt  test_main.cpp
tests/corpus/: basic.glsl  basic.hlsl  basic.metal  basic.shader  basic.wgsl  compute.hlsl  compute.metal  compute.wgsl  glsl_version_qualifiers.glsl  shadertoy.glsl  shadertoy_extra.glsl
tests/corpus/licensed/: Metal_Blit.metal  SOURCES.md  hello_triangle.wgsl  hello_workgroups.wgsl
